--- a/boids.ipynb
+++ b/boids.ipynb
@@ -21,19 +21,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbce4fec-84b7-4e40-8dff-aacd6682ad9c",
+   "id": "c606d159-340a-4799-9a7b-b0d8ff21fbaf",
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import randint\n",
     "\n",
+    "def generate_boid_attributes(lower, upper, n=10):\n",
+    "    attributes = []\n",
+    "    for i in range(n):\n",
+    "        attributes.append((randint(lower[0], upper[0]),\n",
+    "                           randint(lower[1], upper[1])))\n",
+    "    \n",
+    "    return attributes\n",
+    "\n",
+    "\n",
+    "assert len(generate_boid_attributes([0, 0], [1, 1])) == 10\n",
+    "\n",
+    "first_boid_first_attribute = generate_boid_attributes([0, 0], [1, 1])[0][0] \n",
+    "assert first_boid_first_attribute == 0, first_boid_first_attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbce4fec-84b7-4e40-8dff-aacd6682ad9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lower=[150,300]  # x-lower, y-lower\n",
     "upper=[200,400]  # x-upper, y-upp\n",
     "\n",
-    "pos=[]\n",
-    "for i in range(10):\n",
-    "    pos.append((randint(lower[0], upper[0]),\n",
-    "                randint(lower[1], upper[1])))\n",
+    "pos=generate_boid_attributes(lower, upper)\n",
     "pos"
    ]
   },
@@ -47,11 +66,7 @@
     "lower_v=[5, -10]  # x-lower, y-lower\n",
     "upper_v=[15, 5]  # x-upper, y-upp\n",
     "\n",
-    "vel=[]\n",
-    "for i in range(10):\n",
-    "    vel.append((randint(lower_v[0], upper_v[0]),\n",
-    "                randint(lower_v[1], upper_v[1])))\n",
-    "    \n",
+    "vel=generate_boid_attributes(lower_v, upper_v)\n",
     "vel"
    ]
   },
@@ -83,8 +98,8 @@
     "def update_scatter(frames):\n",
     "    \"\"\"Updates the scatter plot.\"\"\"\n",
     "    for i in range(len(pos)):\n",
-    "        pos[i] = pos[i][0] + vel[i][0],\n",
-    "                 pos[i][1] + vel[i][1]\n",
+    "        pos[i] = (pos[i][0] + vel[i][0],\n",
+    "                  pos[i][1] + vel[i][1])\n",
     "        \n",
     "    scat.set_offsets(pos)"
    ]
@@ -106,24 +121,6 @@
     "\n",
     "HTML(anim.to_jshtml())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40028e76-ddc2-45e6-ac32-985fb6cf899b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13935209-eb15-4a06-a575-e1691c4aa473",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
