--- a/boids.ipynb
+++ b/boids.ipynb
@@ -5,7 +5,7 @@
    "id": "03e7dffc-f203-4b1e-a1d1-53437fe12e29",
    "metadata": {},
    "source": [
-    "# Boids"
+    "# Boids!"
    ]
   },
   {
